--- a/Doc/Experience/20250811 检查.md
+++ b/Doc/Experience/20250811 检查.md
@@ -257,3 +257,213 @@ return await Task.FromResult(CacheConflictChoice.SyncMode);
 - ErrorRecoveryService智能识别（现有机制已足够）
 
 你觉得哪些是必须处理的？哪些我考虑过度了？
+
+## 🔴 **严重问题（必须立即修复）**
+
+### **问题1: 停止加速同步顺序错误** ⚡ 最危险
+
+**现状**：先停监控，再同步 → 数据丢失窗口 **方案**：**交换2行代码顺序**
+
+```csharp
+// 修复前：
+_fileSyncService.StopMonitoring(cachePath);
+await _fileSyncService.ForceSync(cachePath);
+
+// 修复后：
+await _fileSyncService.ForceSync(cachePath);  // 先同步
+_fileSyncService.StopMonitoring(cachePath);   // 后停止
+```
+
+**工作量**：30秒
+
+---
+
+### **问题2: Robocopy失败不清理残留**
+
+**现状**：复制失败后，缓存盘留着50GB垃圾 **方案**：**catch中删除cachePath**
+
+```csharp
+catch (Exception ex)
+{
+    LogMessage?.Invoke(this, $"❌ 复制失败：{ex.Message}");
+    
+    // 清理不完整缓存
+    if (Directory.Exists(cachePath))
+    {
+        try { Directory.Delete(cachePath, true); }
+        catch (Exception e) { LogMessage?.Invoke(this, $"清理失败：{e.Message}"); }
+    }
+    return false;
+}
+```
+
+**工作量**：5分钟
+
+---
+
+### **问题3: Junction创建失败回滚被吞**
+
+**现状**：回滚失败，用户的目录消失了，没有任何提示 **方案**：**回滚失败时明确告知用户手动恢复方法**
+
+```csharp
+catch (Exception ex)
+{
+    LogMessage?.Invoke(this, $"❌ Junction创建失败：{ex.Message}");
+    
+    try 
+    { 
+        Directory.Move(originalBackupPath, mountPoint);
+        LogMessage?.Invoke(this, "✅ 已自动回滚");
+    } 
+    catch (Exception rollbackEx) 
+    { 
+        LogMessage?.Invoke(this, $"🔴 回滚失败！请手动恢复：");
+        LogMessage?.Invoke(this, $"   将 '{originalBackupPath}' 重命名为 '{mountPoint}'");
+        LogMessage?.Invoke(this, $"   错误：{rollbackEx.Message}");
+    }
+    return false;
+}
+```
+
+**工作量**：5分钟
+
+---
+
+### **问题4: 空catch块吞掉异常**
+
+**现状**：清理失败无日志 **方案**：**所有空catch改为记录日志**
+
+```csharp
+try { Directory.Delete(cachePath, true); }
+catch (Exception e) { LogMessage?.Invoke(this, $"清理失败：{e.Message}"); }
+```
+
+**工作量**：找到所有空catch，逐个加日志（约10分钟）
+
+---
+
+## 🟠 **高优先级（强烈建议修复）**
+
+### **问题5: 磁盘空间不足预检查**
+
+**现状**：复制30分钟后才失败 **方案**：**Robocopy前检查**
+
+```csharp
+private bool HasEnoughSpace(string sourcePath, string destPath, IProgress<string> progress)
+{
+    try
+    {
+        var sourceSize = GetDirectorySize(sourcePath);
+        var destDrive = new DriveInfo(Path.GetPathRoot(destPath));
+        var needed = (long)(sourceSize * 1.1);
+        
+        if (destDrive.AvailableFreeSpace < needed)
+        {
+            progress?.Report($"空间不足：需要{needed/1024.0/1024/1024:F1}GB，剩余{destDrive.AvailableFreeSpace/1024.0/1024/1024:F1}GB");
+            return false;
+        }
+        return true;
+    }
+    catch { return true; } // 检查失败不阻止
+}
+```
+
+**工作量**：15分钟
+
+---
+
+### **问题6: 缓存盘在源盘内部循环引用**
+
+**现状**：可能死循环 **方案**：**路径包含检查**
+
+```csharp
+if (cachePath.StartsWith(sourcePath + "\\", StringComparison.OrdinalIgnoreCase) ||
+    sourcePath.StartsWith(cachePath + "\\", StringComparison.OrdinalIgnoreCase))
+{
+    progress?.Report("错误：缓存路径不能在源路径内部（或相反）");
+    return false;
+}
+```
+
+**工作量**：5分钟
+
+---
+
+### **问题7: FileSystemWatcher队列无上限**
+
+**方案**：**简单的上限保护**
+
+```csharp
+private const int MAX_QUEUE_SIZE = 1000;
+
+void OnFileChanged(...)
+{
+    if (_syncQueue.Count >= MAX_QUEUE_SIZE)
+    {
+        // 丢弃，记录警告
+        LogMessage?.Invoke(this, $"⚠️ 队列已满，跳过：{e.Name}");
+        return;
+    }
+    // ...原有逻辑
+}
+```
+
+**工作量**：10分钟
+
+---
+
+### **问题8: 缓存冲突对话框未实现**
+
+**方案**：参照RemoveAccelerationDialog创建简单对话框
+
+```xaml
+<!-- 3个按钮：同步模式、清除重建、取消 -->
+```
+
+**工作量**：30分钟
+
+---
+
+## 🟡 **中优先级（可选优化）**
+
+### **问题9-11**:
+
+- FastCopy并发数 → 添加到配置文件
+- 文件锁重试时间 → 从8次降为5次
+- 错误提示 → 仅改进关键点
+
+**评估**：这些不影响数据安全，可以延后或不做
+
+---
+
+## ⚪ **低优先级（暂不处理）**
+
+### **问题12-14**:
+
+- NTFS检查、Robocopy输出解析、FastCopy超时
+- **理由**：极少遇到 + 现有机制够用
+
+---
+
+## 我的建议
+
+**立即修复（30分钟内）**：
+
+1. ✅ 问题1：交换2行代码
+2. ✅ 问题2：Robocopy失败清理
+3. ✅ 问题3：回滚失败提示
+4. ✅ 问题4：空catch加日志
+
+**本周修复（2小时内）**： 5. ✅ 问题5：磁盘空间检查 6. ✅ 问题6：循环引用检查 7. ✅ 问题7：队列上限 8. ⚠️ 问题8：对话框（可选）
+
+ 
+
+**不处理**：问题9-14
+
+---
+
+**请告诉我：**
+
+1. 哪些方案需要调整？
+2. 哪些问题我遗漏了优先级判断？
+3. 从哪个问题开始处理？
