--- a/Doc/Main/2.技术架构总览.md
+++ b/Doc/Main/2.技术架构总览.md
@@ -1,6 +1,6 @@
 # 2. 技术架构总览
 
-> **文档版本**: 3.0
+> **文档版本**: 3.1
 > **更新日期**: 2025-11-08
 > **文档说明**: 本文档描述CacheMax的整体架构设计、核心组件和数据流向
 
@@ -19,7 +19,8 @@
   - [2.2.6 ConfigService](#226-configservice)
   - [2.2.7 AsyncLogger](#227-asynclogger)
   - [2.2.8 SafeFileOperations](#228-safefileoperations)
-  - [2.2.9 SingleInstanceManager](#229-singleinstancemanager)
+  - [2.2.9 CacheSizeUpdater](#229-cachesizeupdater)
+  - [2.2.10 SingleInstanceManager](#2210-singleinstancemanager)
 
 ---
 
@@ -210,7 +211,7 @@ UI更新队列状态
 
 ## 2.2 核心组件详解
 
-系统共包含**9个核心服务组件**，每个组件职责单一，协同工作。
+系统共包含**10个核心服务组件**，每个组件职责单一，协同工作。
 
 ---
 
@@ -1017,7 +1018,99 @@ static extern SafeFileHandle CreateFile(
 
 ---
 
-## 2.2.9 SingleInstanceManager
+## 2.2.9 CacheSizeUpdater
+
+**文件位置**: `CacheMax.GUI/Services/CacheSizeUpdater.cs`
+
+### 职责
+
+实现智能缓存大小更新机制，结合**防抖、强制更新和定时更新**三种策略，避免频繁磁盘I/O影响性能。
+
+### 核心参数
+
+```csharp
+private const int DEBOUNCE_DELAY_MS = 8000;        // 防抖延迟：8秒
+private const int MAX_DEBOUNCE_DELAY_MS = 45000;   // 最大防抖延迟：45秒
+private const int PERIODIC_UPDATE_MS = 45000;      // 定时更新间隔：45秒
+```
+
+### 三重更新策略
+
+#### 1. 防抖机制（8秒）
+
+```csharp
+public void NotifyFileChange()
+{
+    var now = DateTime.Now;
+    var timeSinceLastTrigger = (now - _lastTriggerTime).TotalMilliseconds;
+
+    // 重置防抖计时器
+    _debounceTimer?.Dispose();
+    _debounceTimer = new Timer(DebounceCallback, null, DEBOUNCE_DELAY_MS, Timeout.Infinite);
+}
+```
+
+**适用场景**: 文件变化后等待8秒，避免频繁更新
+
+#### 2. 强制更新机制（45秒）
+
+```csharp
+// 持续变化超过45秒，强制触发更新
+if (timeSinceLastTrigger >= MAX_DEBOUNCE_DELAY_MS)
+{
+    TriggerUpdate("强制更新（持续变化超过45秒）");
+    return;
+}
+```
+
+**适用场景**: 大量文件持续变化时，确保至少每45秒更新一次
+
+#### 3. 定时更新机制（45秒）
+
+```csharp
+// 无论是否有变化，每45秒主动更新一次
+_periodicTimer = new Timer(_ => UpdateNow("定时更新"),
+    null, PERIODIC_UPDATE_MS, PERIODIC_UPDATE_MS);
+```
+
+**适用场景**: 无文件变化时保持定期更新
+
+### 集成方式
+
+```csharp
+// CacheManagerService中为每个加速文件夹创建独立updater
+private readonly Dictionary<string, CacheSizeUpdater> _sizeUpdaters = new();
+
+private void StartCacheSizeUpdater(string cachePath)
+{
+    var updater = new CacheSizeUpdater(
+        cachePath,
+        (newSize) => {
+            var stats = await GetCacheStats(cachePath);
+            stats.TotalCacheSize = newSize;
+            StatsUpdated?.Invoke(this, stats);
+        });
+
+    _sizeUpdaters[cachePath] = updater;
+
+    // 延迟2秒后触发首次更新（等待UI加载完成）
+    _ = Task.Run(async () => {
+        await Task.Delay(2000);
+        updater.UpdateNow("延迟初始更新");
+    });
+}
+```
+
+### 实现要点
+
+1. **延迟初始更新**: 等待2秒确保UI加载完成，避免时序问题
+2. **大小写不敏感**: 路径匹配使用`StringComparison.OrdinalIgnoreCase`
+3. **事件链路**: CacheSizeUpdater → CacheManagerService.StatsUpdated → MainWindow.OnCacheStatsUpdated
+4. **线程安全**: 使用Timer确保更新操作的线程安全
+
+---
+
+## 2.2.10 SingleInstanceManager
 
 **文件位置**: `CacheMax.GUI/Services/SingleInstanceManager.cs`
 
