--- a/Doc/Main/3.项目规范与约定.md
+++ b/Doc/Main/3.项目规范与约定.md
@@ -1,6 +1,6 @@
 # 3. 项目规范与约定
 
-> **文档版本**: 3.0
+> **文档版本**: 3.1
 > **更新日期**: 2025-11-08
 > **文档说明**: 本文档描述CacheMax项目的开发规范、约定和最佳实践
 
@@ -285,6 +285,160 @@ public class FileSyncService : IDisposable
     <SolidColorBrush x:Key="ErrorColor" Color="#F44336" />
 </Application.Resources>
 ```
+
+#### 3. INotifyPropertyChanged实现规范
+
+**重要教训**: WPF数据绑定必须配合PropertyChanged通知，否则UI不会更新
+
+##### 错误示例
+
+```csharp
+// ❌ 简单自动属性 - UI不会更新
+public class AcceleratedFolder
+{
+    public long CacheSize { get; set; }
+    public string OriginalPath { get; set; }
+    public string CachePath { get; set; }
+}
+
+// 问题: 当代码执行 folder.CacheSize = newValue 时
+//       值虽然改变了，但WPF绑定系统不知道
+//       导致UI显示仍是旧值
+```
+
+##### 正确示例
+
+```csharp
+// ✅ 带通知的属性 - UI自动更新
+public class AcceleratedFolder : INotifyPropertyChanged
+{
+    private long _cacheSize = 0;
+    public long CacheSize
+    {
+        get => _cacheSize;
+        set
+        {
+            _cacheSize = value;
+            OnPropertyChanged(nameof(CacheSize));
+            OnPropertyChanged(nameof(CacheSizeFormatted));  // 同时通知依赖属性
+        }
+    }
+
+    private string _originalPath = string.Empty;
+    public string OriginalPath
+    {
+        get => _originalPath;
+        set
+        {
+            _originalPath = value;
+            OnPropertyChanged(nameof(OriginalPath));
+        }
+    }
+
+    // 实现INotifyPropertyChanged接口
+    public event PropertyChangedEventHandler? PropertyChanged;
+    protected virtual void OnPropertyChanged(string propertyName)
+    {
+        PropertyChanged?.Invoke(this, new PropertyChangedEventArgs(propertyName));
+    }
+}
+```
+
+##### 规范要点
+
+**1. 适用场景**
+
+必须使用PropertyChanged通知的情况：
+- ✅ 所有需要绑定到UI的属性
+- ✅ 计算属性的依赖项
+- ✅ ObservableCollection中的对象属性
+
+不需要通知的情况：
+- ❌ 仅用于内部逻辑的私有字段
+- ❌ 常量和只读属性
+- ❌ 方法参数和局部变量
+
+**2. 依赖属性通知**
+
+```csharp
+// CacheSizeFormatted依赖于CacheSize
+public long CacheSize
+{
+    get => _cacheSize;
+    set
+    {
+        _cacheSize = value;
+        OnPropertyChanged(nameof(CacheSize));           // 通知自己
+        OnPropertyChanged(nameof(CacheSizeFormatted));  // 通知依赖者
+    }
+}
+
+[JsonIgnore]
+public string CacheSizeFormatted => FormatBytes(CacheSize);
+```
+
+**3. 命名约定**
+
+```csharp
+// 使用nameof避免字符串拼写错误
+OnPropertyChanged(nameof(CacheSize));      // ✅ 推荐
+OnPropertyChanged("CacheSize");            // ⚠️ 易出错
+OnPropertyChanged("cachSize");             // ❌ 拼写错误，难以发现
+```
+
+**4. 常见错误**
+
+| 错误类型 | 症状 | 解决方法 |
+|---------|------|----------|
+| **忘记调用OnPropertyChanged** | 值改变但UI不更新 | 在setter中添加通知调用 |
+| **属性名拼写错误** | UI不更新且无报错 | 使用nameof(PropertyName) |
+| **忘记通知依赖属性** | 计算属性不更新 | 通知所有依赖此属性的属性 |
+| **循环通知** | StackOverflowException | 检查属性间依赖关系 |
+
+**5. 调试技巧**
+
+```csharp
+// 添加日志确认通知被触发
+protected virtual void OnPropertyChanged(string propertyName)
+{
+    #if DEBUG
+    System.Diagnostics.Debug.WriteLine($"PropertyChanged: {propertyName}");
+    #endif
+
+    PropertyChanged?.Invoke(this, new PropertyChangedEventArgs(propertyName));
+}
+```
+
+##### 实际案例：缓存大小不更新
+
+**问题**: 日志显示"缓存大小已更新"，但UI表格仍显示"0 B"
+
+**原因分析**:
+```csharp
+// 原代码（错误）
+public long CacheSize { get; set; }
+
+// 虽然 folder.CacheSize = newSize 执行了
+// 但WPF绑定系统没有收到通知
+```
+
+**修复方案**:
+```csharp
+// 修复后
+private long _cacheSize = 0;
+public long CacheSize
+{
+    get => _cacheSize;
+    set
+    {
+        _cacheSize = value;
+        OnPropertyChanged(nameof(CacheSize));
+        OnPropertyChanged(nameof(CacheSizeFormatted));
+    }
+}
+```
+
+**结果**: UI立即显示正确的缓存大小
 
 ---
 
