--- a/Doc/Main/5.功能模块设计.md
+++ b/Doc/Main/5.功能模块设计.md
@@ -1,6 +1,6 @@
 # 5. 功能模块设计
 
-> **文档版本**: 3.0
+> **文档版本**: 3.1
 > **更新日期**: 2025-11-08
 > **文档说明**: 本文档详细描述CacheMax各功能模块的设计和实现细节
 
@@ -486,6 +486,184 @@ catch (OperationCanceledException)
     throw new TimeoutException("FastCopy timeout after 30 minutes");
 }
 ```
+
+### 缓存大小更新优化
+
+#### 问题背景
+
+实时计算目录大小需要递归遍历所有文件，会导致：
+1. **频繁磁盘I/O**: 每次文件变化都计算，影响性能
+2. **CPU占用高**: 大目录遍历消耗CPU资源
+3. **UI卡顿**: 同步计算会阻塞UI线程
+
+**解决方案**: 实现智能更新策略，平衡实时性和性能
+
+#### 三重更新策略
+
+##### 1. 防抖机制（8秒）
+
+**原理**: 文件变化后等待一段时间，如果期间无新变化才更新
+
+```csharp
+public void NotifyFileChange()
+{
+    var now = DateTime.Now;
+
+    // 重置防抖计时器
+    _debounceTimer?.Dispose();
+    _debounceTimer = new Timer(DebounceCallback, null, 8000, Timeout.Infinite);
+
+    _lastTriggerTime = now;
+}
+
+private void DebounceCallback(object? state)
+{
+    TriggerUpdate("防抖更新（8秒无新变化）");
+}
+```
+
+**适用场景**:
+- 用户正在编辑多个文件
+- 编辑器自动保存触发多次变化
+- 避免短时间内频繁更新
+
+##### 2. 强制更新机制（45秒）
+
+**原理**: 即使文件持续变化，也强制至少每45秒更新一次
+
+```csharp
+public void NotifyFileChange()
+{
+    var now = DateTime.Now;
+    var timeSinceLastTrigger = (now - _lastTriggerTime).TotalMilliseconds;
+
+    // 超过45秒则强制更新
+    if (timeSinceLastTrigger >= 45000)
+    {
+        TriggerUpdate("强制更新（持续变化超过45秒）");
+        return;
+    }
+
+    // 否则重置防抖计时器
+    _debounceTimer?.Dispose();
+    _debounceTimer = new Timer(DebounceCallback, null, 8000, Timeout.Infinite);
+}
+```
+
+**适用场景**:
+- 大量文件持续复制/下载
+- 编译/构建过程持续写入
+- 确保用户能看到进度
+
+##### 3. 定时更新机制（45秒）
+
+**原理**: 无论是否有文件变化，每45秒主动检查一次
+
+```csharp
+// 定时器初始化
+_periodicTimer = new Timer(
+    _ => UpdateNow("定时更新"),
+    null,
+    45000,  // 延迟45秒启动
+    45000   // 每45秒触发一次
+);
+```
+
+**适用场景**:
+- 无文件变化时保持数据新鲜
+- 发现外部程序的文件变化（FileSystemWatcher可能遗漏）
+- 用户长时间未操作时的后台更新
+
+#### 实现细节
+
+##### 初始更新延迟
+
+```csharp
+// 延迟2秒后触发首次更新（等待UI加载完成）
+_ = Task.Run(async () => {
+    await Task.Delay(2000);
+    updater.UpdateNow("延迟初始更新");
+});
+```
+
+**原因**: 避免时序问题
+- UI控件可能尚未绑定
+- ObservableCollection可能未初始化
+- 过早更新会导致事件丢失
+
+##### 大小写不敏感路径匹配
+
+```csharp
+// 错误示例（大小写敏感）
+var existingItem = _acceleratedFolders.FirstOrDefault(f =>
+    f.CachePath == e.CachePath);  // ❌ 可能匹配失败
+
+// 正确示例（大小写不敏感）
+var existingItem = _acceleratedFolders.FirstOrDefault(f =>
+    string.Equals(f.CachePath, e.CachePath, StringComparison.OrdinalIgnoreCase));  // ✅
+```
+
+**原因**: Windows路径不区分大小写
+- `S:\Cache\D\MyProject` 等同于 `s:\cache\d\myproject`
+- FileSystemWatcher可能返回不同大小写的路径
+
+##### 事件链路
+
+```
+文件变化
+    ↓
+FileSyncService.OnSyncCompleted
+    ↓
+CacheManagerService.NotifyCacheFileChange
+    ↓
+CacheSizeUpdater.NotifyFileChange
+    ↓
+TriggerUpdate → CalculateDirectorySize
+    ↓
+onSizeUpdated回调
+    ↓
+CacheManagerService.StatsUpdated事件
+    ↓
+MainWindow.OnCacheStatsUpdated
+    ↓
+UI更新
+```
+
+#### 性能对比
+
+| 策略 | 更新频率 | CPU占用 | 实时性 |
+|------|---------|---------|--------|
+| 实时更新 | 每次变化 | 高 | 最高 |
+| 纯定时更新 | 固定间隔 | 低 | 低 |
+| **三重策略** | 智能触发 | 低 | 高 |
+
+#### WPF数据绑定要求
+
+**关键教训**: 所有绑定到UI的属性必须实现PropertyChanged通知
+
+```csharp
+// ❌ 错误：简单自动属性 - UI不更新
+public long CacheSize { get; set; }
+
+// ✅ 正确：带通知的属性 - UI自动更新
+private long _cacheSize = 0;
+public long CacheSize
+{
+    get => _cacheSize;
+    set
+    {
+        _cacheSize = value;
+        OnPropertyChanged(nameof(CacheSize));
+        OnPropertyChanged(nameof(CacheSizeFormatted));  // 同时通知依赖属性
+    }
+}
+```
+
+**同样适用于**:
+- `OriginalPath` - 源路径列
+- `CachePath` - 缓存路径列
+- `Status` - 状态列
+- `ProgressPercentage` - 进度条
 
 ---
 
