--- a/Doc/Main/6.开发时间线.md
+++ b/Doc/Main/6.开发时间线.md
@@ -1,6 +1,6 @@
 # 6. 开发时间线
 
-> **文档版本**: 3.0
+> **文档版本**: 3.1
 > **更新日期**: 2025-11-08
 > **文档说明**: 本文档记录CacheMax的开发进度和功能完成情况
 
@@ -46,7 +46,7 @@
 
 ### ✅ 缓存管理
 
-**实现文件**: `Services/CacheManagerService.cs`
+**实现文件**: `Services/CacheManagerService.cs` + `Services/CacheSizeUpdater.cs`
 
 | 功能 | 状态 | 说明 |
 |------|------|------|
@@ -55,6 +55,7 @@
 | 恢复功能 | ✅ | 重新启动监控 |
 | 停止功能 | ✅ | 完全移除,可选删除缓存 |
 | 状态恢复 | ✅ | 应用重启自动恢复 |
+| 缓存大小自动更新 | ✅ | 防抖+强制+定时三重策略 |
 
 ### ✅ 错误处理与恢复
 
@@ -262,10 +263,28 @@
   ✅ AsyncLogger异步日志
   ✅ WPF UI完整实现
 
-2025-11-08 - 文档大修订
+2025-11-08 上午 - 文档大修订
   ✅ 删除虚构内容
   ✅ 基于实际代码重写文档
   ✅ 拆分为7个独立文档
+
+2025-11-08 下午 - 重要Bug修复
+  ✅ 修复WPF数据绑定PropertyChanged问题
+     - CacheSize、OriginalPath、CachePath三个属性
+     - 从简单自动属性改为带通知的属性
+  ✅ 实现缓存大小自动更新机制
+     - 创建CacheSizeUpdater组件
+     - 防抖机制（8秒）
+     - 强制更新机制（45秒）
+     - 定时更新机制（45秒）
+  ✅ 统一对话框风格
+     - 重构ModernMessageBox为简洁风格
+     - 浅灰色背景#F5F5F5
+     - 移除花哨装饰（圆角、彩色图标）
+  ✅ 修复路径比较大小写敏感问题
+     - 使用StringComparison.OrdinalIgnoreCase
+  ✅ 修复时序问题
+     - 缓存大小更新延迟2秒（等待UI加载）
 ```
 
 ---
