--- a/Doc/Main/7.技术风险与解决方案.md
+++ b/Doc/Main/7.技术风险与解决方案.md
@@ -1,6 +1,6 @@
 # 7. 技术风险与解决方案
 
-> **文档版本**: 3.0
+> **文档版本**: 3.1
 > **更新日期**: 2025-11-08
 > **文档说明**: 本文档描述CacheMax的部署要求、使用限制和常见问题解决方案
 
@@ -216,6 +216,122 @@ notepad Logs\CacheMax_latest.log
 2. 查看`Logs`目录下的错误日志
 3. 删除`accelerated_folders.json`重新配置
 
+### 常见问题5: UI数据不更新
+
+**症状**: 日志显示数据已更新，但UI显示仍是旧值
+
+**典型表现**:
+- 日志: `[更新器] 缓存大小已更新: REAPER = 7406.62 MB`
+- 日志: `[UI] 缓存大小已更新: A:\Code\REAPER = 7406.62 MB`
+- **但UI表格仍显示**: `缓存大小: 0 B`
+
+**根本原因**: WPF数据绑定属性缺少PropertyChanged通知机制
+
+**原因分析**:
+
+```csharp
+// 错误代码（简单自动属性）
+public class AcceleratedFolder
+{
+    public long CacheSize { get; set; }  // ❌ 无通知机制
+    public string OriginalPath { get; set; }  // ❌ 无通知机制
+    public string CachePath { get; set; }  // ❌ 无通知机制
+}
+
+// 问题：虽然 folder.CacheSize = newValue 执行成功
+//       但WPF绑定系统没有收到PropertyChanged事件
+//       导致UI不知道需要刷新显示
+```
+
+**排查步骤**:
+
+1. **检查属性实现**
+   ```csharp
+   // 查看属性定义，确认是否有OnPropertyChanged调用
+   public long CacheSize
+   {
+       get => _cacheSize;
+       set
+       {
+           _cacheSize = value;
+           OnPropertyChanged(nameof(CacheSize));  // ✅ 必须有这行
+       }
+   }
+   ```
+
+2. **检查类继承**
+   ```csharp
+   // 确认类实现了INotifyPropertyChanged接口
+   public class AcceleratedFolder : INotifyPropertyChanged  // ✅
+   {
+       public event PropertyChangedEventHandler? PropertyChanged;
+       protected virtual void OnPropertyChanged(string propertyName)
+       {
+           PropertyChanged?.Invoke(this, new PropertyChangedEventArgs(propertyName));
+       }
+   }
+   ```
+
+3. **检查XAML绑定**
+   ```xaml
+   <!-- 确认绑定路径正确 -->
+   <DataGridTextColumn Header="缓存大小"
+                       Binding="{Binding CacheSizeFormatted}" />
+   <!-- Path名称必须与属性名完全匹配 -->
+   ```
+
+4. **添加调试日志**
+   ```csharp
+   protected virtual void OnPropertyChanged(string propertyName)
+   {
+       #if DEBUG
+       Debug.WriteLine($"PropertyChanged: {propertyName}");
+       #endif
+       PropertyChanged?.Invoke(this, new PropertyChangedEventArgs(propertyName));
+   }
+   ```
+
+**修复方案**:
+
+```csharp
+// 修复前（UI不更新）
+public long CacheSize { get; set; }
+
+// 修复后（UI自动更新）
+private long _cacheSize = 0;
+public long CacheSize
+{
+    get => _cacheSize;
+    set
+    {
+        _cacheSize = value;
+        OnPropertyChanged(nameof(CacheSize));
+        OnPropertyChanged(nameof(CacheSizeFormatted));  // 通知依赖属性
+    }
+}
+```
+
+**验证修复**:
+
+1. 重新编译项目
+2. 启动应用并加速一个文件夹
+3. 修改文件触发同步
+4. **观察**: 表格中缓存大小应立即更新
+5. **查看日志**: 应看到PropertyChanged调试信息
+
+**相关问题**:
+
+此问题也会导致以下UI元素不更新：
+- 源路径列显示为空
+- 缓存路径列显示为空
+- 进度条不移动
+- 状态不变化
+
+**解决方法相同**：确保所有绑定属性都实现了PropertyChanged通知
+
+**参考文档**:
+- [3.项目规范与约定.md - INotifyPropertyChanged实现规范](./3.项目规范与约定.md#3-inotifypropertychanged实现规范)
+
 ---
 
 ## 7.7 安全与权限
@@ -292,6 +408,12 @@ notepad Logs\CacheMax_latest.log
 □ 检查.NET 8.0安装
 □ 查看日志文件
 □ 删除配置文件重试
+
+问题: UI数据不更新
+□ 检查属性是否有OnPropertyChanged调用
+□ 检查类是否实现INotifyPropertyChanged
+□ 检查XAML绑定路径
+□ 添加调试日志验证事件触发
 ```
 
 ---
